<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="729dp"
            tools:layout_editor_absoluteY="1dp">

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/welcome_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/house_image" />

            <Button
                android:id="@+id/login_button"
                style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                android:layout_width="113dp"
                android:layout_height="41dp"
                android:layout_marginTop="48dp"
                android:background="@android:color/holo_green_light"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/login_button_text"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_text" />

            <EditText
                android:id="@+id/mail_text"
                android:layout_width="245dp"
                android:layout_height="43dp"
                android:layout_marginTop="40dp"
                android:autofillHints="@string/email_hint_text"
                android:ems="10"
                android:hint="@string/email_hint_text"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

            <EditText
                android:id="@+id/password_text"
                android:layout_width="245dp"
                android:layout_height="44dp"
                android:layout_marginTop="24dp"
                android:autofillHints="@string/password_hint_text"
                android:ems="10"
                android:hint="@string/password_hint_text"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mail_text" />

            <ImageView
                android:id="@+id/house_image"
                android:layout_width="86dp"
                android:layout_height="91dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/price" />

            <TextView
                android:id="@+id/dont_have_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/register_info_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_button" />

            <TextView
                android:id="@+id/forgot_password_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/forgot_password_text"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>