<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.prediction.Step3Fragment"
    android:configChanges="orientation"
    android:screenOrientation="portrait">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/return_button"
                style="@android:style/TextAppearance.Material.Widget.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="100dp"
                android:background="@android:color/holo_green_light"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/next_button_text"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/prev_button2"
                app:layout_constraintTop_toBottomOf="@+id/floor_of_apartment_spinner" />

            <Button
                android:id="@+id/prev_button2"
                style="@android:style/TextAppearance.Material.Widget.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="100dp"
                android:background="@android:color/holo_green_light"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/prev_button_text"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/return_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/floor_of_apartment_spinner" />

            <TextView
                android:id="@+id/age_of_building_textView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="95dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/age_of_building_text"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/age_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/build_floor_number_textView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/build_floor_number_text"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/build_floor_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/age_of_building_textView" />

            <TextView
                android:id="@+id/floors_of_apartment_textView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/floors_of_apartment_text"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/floor_of_apartment_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/build_floor_number_textView" />

            <Spinner
                android:id="@+id/age_spinner"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="87dp"
                android:gravity="start|center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/age_of_building_textView"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/build_floor_spinner"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="28dp"
                android:gravity="start|center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/build_floor_number_textView"
                app:layout_constraintTop_toBottomOf="@+id/age_spinner" />

            <Spinner
                android:id="@+id/floor_of_apartment_spinner"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/floors_of_apartment_textView"
                app:layout_constraintTop_toBottomOf="@+id/build_floor_spinner" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>