<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.prediction.Step5Fragment"
    android:configChanges="orientation"
    android:screenOrientation="portrait">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/result_button"
                style="@android:style/TextAppearance.Material.Widget.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"

                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="100dp"
                android:background="@android:color/holo_green_light"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/result_button_text"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/prev_button4"
                app:layout_constraintTop_toBottomOf="@+id/heating_type_spinner" />

            <Button
                android:id="@+id/prev_button4"
                style="@android:style/TextAppearance.Material.Widget.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="100dp"
                android:background="@android:color/holo_green_light"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/prev_button_text"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/result_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/heating_type_spinner" />

            <Spinner
                android:id="@+id/credit_availability_spinner"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="90dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/credit_availability_textView"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/usage_status_spinner"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/usage_status_textView"
                app:layout_constraintTop_toBottomOf="@+id/credit_availability_spinner" />

            <TextView
                android:id="@+id/credit_availability_textView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="95dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/credit_availability_text"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/credit_availability_spinner"
                app:layout_constraintHorizontal_bias="0.549"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/usage_status_textView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/usage_status_text"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/usage_status_spinner"
                app:layout_constraintHorizontal_bias="0.66"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/credit_availability_textView" />

            <TextView
                android:id="@+id/heating_type_textView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/heating_type_text"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/heating_type_spinner"
                app:layout_constraintHorizontal_bias="0.668"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usage_status_textView" />

            <Spinner
                android:id="@+id/heating_type_spinner"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/heating_type_textView"
                app:layout_constraintTop_toBottomOf="@+id/usage_status_spinner" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>