<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.prediction.Step4Fragment"
    android:configChanges="orientation"
    android:screenOrientation="portrait">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/next_button4"
                style="@android:style/TextAppearance.Material.Widget.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="100dp"

                android:layout_marginEnd="50dp"
                android:layout_marginBottom="100dp"
                android:background="@android:color/holo_green_light"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/next_button_text"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/prev_button3"
                app:layout_constraintTop_toBottomOf="@+id/bathrooms_spinner" />

            <Button
                android:id="@+id/prev_button3"
                style="@android:style/TextAppearance.Material.Widget.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="100dp"
                android:background="@android:color/holo_green_light"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/prev_button_text"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/next_button4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bathrooms_spinner" />

            <Spinner
                android:id="@+id/rooms_spinner"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="87dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/number_of_rooms_textView"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/bathrooms_spinner"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/number_of_bathrooms_textView"
                app:layout_constraintTop_toBottomOf="@+id/rooms_spinner" />

            <TextView
                android:id="@+id/number_of_rooms_textView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="95dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/number_of_rooms_text"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/rooms_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/number_of_bathrooms_textView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/number_of_bathrooms_text"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/bathrooms_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number_of_rooms_textView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>